# projectsmd-hermes

./: .gitignore  Cargo.toml  HERMES.md  README.md  agent-skill.md  example-cli-tool.md  project.md  pyproject.toml  specification.md  template.md  validate.py  workflow-diagram.html
.github/workflows/: ci.yml
dashboard/: manifest.json  plugin_api.py
docs/: dashboard-plugin.md
docs/plans/: 2026-04-30-production-polish.md  2026-04-30-world-class-agentic-project-management.md
projectsmd_dashboard/: __init__.py  api.py  config.py  diff_preview.py  event_protocol.py  gates.py  github_integration.py  locks.py  models.py  project_scan.py  projectsmd_cli.py  prompts.py  roster.py  run_registry.py  safety.py  ship_checklist.py  snapshots.py  tmux_runtime.py  update_queue.py
scripts/: install-dashboard-plugin.sh  smoke-test-dashboard-plugin.sh
src/: decisions.rs  frontmatter.rs  lib.rs  main.rs  project.rs  render.rs  requirements.rs  sections.rs  session_log.rs  state.rs  tasks.rs  validate.rs
src/commands/: archive.rs  decide.rs  diff.rs  discover.rs  init.rs  mod.rs  next.rs  phase.rs  session.rs  skill.rs  status.rs  task.rs  validate_cmd.rs  (+1 more)
tests/: test_config.py  test_create_project.py  test_dashboard_bundle.py  test_dashboard_plugin.py  test_diff_preview.py  test_event_protocol.py  test_gates.py  test_github_integration.py  test_plugin_api_contract.py  test_projectsmd_cli.py  test_prompts.py  test_recovery_drills.py  test_roster.py  test_run_registry.py  test_safety.py  test_ship_checklist.py  test_snapshots.py  test_tmux_runtime.py  test_update_queue.py
(+5 files in other folders)
