[package]
name = "projectsmd"
version = "0.1.0"
edition = "2021"
description = "A project.md lifecycle management tool"
license = "MIT"
repository = "https://github.com/am423/projectsmd-hermes"
readme = "README.md"
keywords = ["project-management", "markdown", "cli", "agents", "hermes"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
dialoguer = "0.11"
directories = "6"
similar = "2"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
